<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_to_netcore_cloud">Welcome to Netcore Cloud</string>
    <string name="login1">Login</string>
    <string name="todo">TODO</string>
    <string name="signup1">Signup</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_to_netcore">Welcome to Netcore</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="click_here_to_login">Click here to Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="username1">Username</string>
    <string name="register">Register</string>
</resources>