<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="20dp"
    android:textAlignment="center"
    tools:context=".login"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/netcore"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_netcore"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/background"
        android:textSize="20sp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:fontFamily="sans-serif-black"
        android:textSize="18sp"
        android:textColor="@color/background"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        // username enter design
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_text_design"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:hint="@string/username"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        // password enter design
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="5dp"
       android:id="@+id/password_input_text_field"
       style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
       android:hint="@string/password"
       app:passwordToggleEnabled="true"
       app:passwordToggleTint="@color/background">

       <com.google.android.material.textfield.TextInputEditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="textPassword"/>

   </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="#0000000f"
        android:text="@string/forgot_password"
        android:textColor="@color/background"
        android:elevation="5dp"
        android:layout_marginTop="10dp" />

    <Button
        android:onClick="loginBtnClicked"
        android:id="@+id/loginn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/background"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/signnup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000000f"
        android:text="@string/signup"
        android:textColor="@color/background"
        android:layout_gravity="right"
        android:elevation="5dp"
        android:layout_margin="5dp" />


</androidx.appcompat.widget.LinearLayoutCompat>